Tank auth and empty model

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
 system/
+system/core/
+system/core/*
+system/database/
+system/database/*
+system/fonts/
+system/fonts/*
+system/helpers/
+system/helpers/*
+system/language
+system/language/*
+system/libraries/
+system/libraries/*
 userguide/
 application/cache
 application/core
 application/errors
-application/helpers
 application/hooks
 application/logs
 application/third_party
